message RequestHeader{
    required uint32 request_api_key = 1,
    required uint32 request_api_version = 2,
    required uint32 correlation_id = 3,
    required string client_id = 4,
    optional bytes tagged_fields = 5,
}

message ResponseHeader{
    required uint32 correlation_id = 1,
    optional bytes tagged_fields = 2,
}